2010-10-25  Tony Chang  <tony@chromium.org>

        Reviewed by Anders Carlsson.

        compile TestNetscapePlugIn on chromium linux
        https://bugs.webkit.org/show_bug.cgi?id=48274

        * DumpRenderTree/TestNetscapePlugIn/main.cpp:
        (NP_Initialize): On Linux, plugin funcs are set in initialize.
        (NPP_New): Mark the plugin as windowless.
        (NPP_GetValue): Handle mime type values.
        (NP_GetMIMEDescription):
        (NP_GetValue):
        * DumpRenderTree/chromium/TestNetscapePlugIn/ForwardingHeaders/WebKit/npapi.h: define TRUE and FALSE, which are in webkit's npapi.h.
        * DumpRenderTree/chromium/TestNetscapePlugIn/ForwardingHeaders/WebKit/npfunctions.h: Pull in npapi.h to get TRUE/FALSE (matches webkit's npfunctions.h)

2010-10-27  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Reviewed by Anders Carlsson.

        Remove contentSizeChanged callbacks as it is no longer
        part of the public UIClient.

        Make WKPageContentsSizeChangedCallback be a private API
        https://bugs.webkit.org/show_bug.cgi?id=48409

        * MiniBrowser/mac/BrowserWindowController.m:
        (-[BrowserWindowController awakeFromNib]):
        * MiniBrowser/win/BrowserView.cpp:
        (BrowserView::create):
        * WebKitTestRunner/TestController.cpp:
        (WTR::createOtherPage):
        (WTR::TestController::initialize):

2010-10-27  Gabor Rapcsanyi  <rgabor@inf.u-szeged.hu>

        Reviewed by Ojan Vafai.

        Make http locking default in NRWT.
        https://bugs.webkit.org/show_bug.cgi?id=48053

        * Scripts/webkitpy/layout_tests/layout_package/dump_render_tree_thread.py:
        * Scripts/webkitpy/layout_tests/run_webkit_tests.py:

2010-10-27  Gabor Rapcsanyi  <rgabor@inf.u-szeged.hu>

        Reviewed by Tony Chang.

        [NRWT] Fix http lock on Windows platform
        https://bugs.webkit.org/show_bug.cgi?id=48321

        * Scripts/webkitpy/layout_tests/port/http_lock.py:
